// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyConvertor() should render correctly with data 1`] = `
<styled.section>
  <form
    data-name="submit"
    onSubmit={[Function]}
  >
    <span>
      Enter GBP amount: 
    </span>
    <input
      data-name="user-input"
      max="10000"
      min="1"
      onChange={[Function]}
      type="number"
    />
    <styled.input
      type="submit"
      value="Submit"
    />
  </form>
  <styled.ul>
    <li
      key="0"
    >
      <span>
        USD
        :
      </span>
      <span>
         
        3.81
      </span>
    </li>
    <li
      key="1"
    >
      <span>
        EUR
        :
      </span>
      <span>
         
        3.36
      </span>
    </li>
  </styled.ul>
  <styled.button
    data-name="sort-button"
    onClick={[Function]}
  >
    Sort A-Z
  </styled.button>
</styled.section>
`;

exports[`CurrencyConvertor() should render correctly without data 1`] = `
<styled.section>
  <form
    data-name="submit"
    onSubmit={[Function]}
  >
    <span>
      Enter GBP amount: 
    </span>
    <input
      data-name="user-input"
      max="10000"
      min="1"
      onChange={[Function]}
      type="number"
    />
    <styled.input
      type="submit"
      value="Submit"
    />
  </form>
  <styled.ul />
  <styled.button
    data-name="sort-button"
    onClick={[Function]}
  >
    Sort A-Z
  </styled.button>
</styled.section>
`;
